--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -42,12 +42,12 @@
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>AdminProduct</servlet-name>
-        <servlet-class>Controller.AdminProduct</servlet-class>
+        <servlet-name>AdminProductAdd</servlet-name>
+        <servlet-class>Controller.AdminProductAdd</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>AdminProduct</servlet-name>
-        <url-pattern>/adminProduct</url-pattern>
+        <servlet-name>AdminProductAdd</servlet-name>
+        <url-pattern>/adminProductAdd</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -77,7 +77,6 @@
         <url-pattern>/productAll</url-pattern>
     </servlet-mapping>
 
-
     <servlet>
         <servlet-name>Deconnexion</servlet-name>
         <servlet-class>Controller.Deconnexion</servlet-class>
@@ -87,5 +86,13 @@
         <url-pattern>/logout</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>AdminUser</servlet-name>
+        <servlet-class>Controller.AdminUser</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AdminUser</servlet-name>
+        <url-pattern>/adminUser</url-pattern>
+    </servlet-mapping>
 
 </web-app>
